# artificer_3d

./: Cargo.toml  editor.ron
assets/materials/: TestScene_materials_library.glb
assets/models/: Scene.glb  Scene_dynamic.glb
assets/shaders/: toon_shader.wgsl
src/: character_controller.rs  game_management.rs  main.rs  projectile.rs
