[package]
name = "artificer_3d"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_egui = "0.27"
belly = { git = "https://github.com/jkb0o/belly.git" }
bevy_xpbd_3d = "0.4.2"
smooth-bevy-cameras = "0.11.0"
