[package]
name = "artificer_3d"
version = "0.0.1"
edition = "2021"
default-run = "game"

[[bin]]
name = "game"

[[bin]]
name = "editor"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[dependencies]
bevy = { version = "0.14.1", features = ["dynamic_linking"] }
bevy_egui = "0.29"
sickle_ui = "0.2.3"
avian3d = "0.1.2"
bevy_dolly = { version = "0.0.4" }
bevy_hanabi = "0.12.2"
bevy_panorbit_camera = "0.19.2"
bevy_editor_pls = "0.9.0"
bevy-inspector-egui = "*"
egui = "*"